--- a/package.json
+++ b/package.json
@@ -1,13 +1,30 @@
 {
-    "name": "hello-world",
-    "description": "Sample NodeJs web application",
-    "version": "0.0.1",
-    "private": true,
-    "devDependencies": {
-        "mocha": "5.0.0",
-        "unit.js": "2.0.0"
-    },
-    "scripts": {
-        "test": "mocha --recursive tests"
-    }
+  "name": "Node-Webiste-EB-Sample-App",
+  "description": "Sample NodeJs web application",
+  "version": "0.0.1",
+  "private": true,
+  "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
+    "babel-loader": "^8.1.0",
+    "html-webpack-plugin": "^4.5.0",
+    "mocha": "5.0.0",
+    "supertest": "3.0.0",
+    "unit.js": "2.0.0",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0"
+  },
+  "scripts": {
+    "start": "node server/index.js",
+    "start-prod": "node server/index.js",
+    "dev": "webpack --mode development --watch",
+    "build": "webpack --mode production",
+    "test": "mocha --recursive tests --exit"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  }
 }
